Fix: Increase section height to fit footer on tablets.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -192,7 +192,7 @@ footer a {
     }
 
     section {
-        height: 808px;
+        height: 840px;
     }
  
     .bed-size, .black-opacity {
